# YARlint

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  commitlintrc.json  deny.toml  release-plz.toml  setup.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  commitlint.yml  cross-platform.yml  deny.yml  label.yml  pages-docs-build.yml  release-plz.yml  stale.yml  typos.yml
docs/: DOCUMENTATION.md
docs/rules/: performance.rst
src/: app.rs  cli.rs  config.rs  filesystem.rs  lib.rs  linter.rs  main.rs  parser.rs  validation.rs
src/cli/: args.rs  output.rs
src/filesystem/: collect.rs  filters.rs
src/linter/: context.rs  cops.rs  engine.rs  finding.rs  rule.rs
src/parser/: ast.rs  ast_parser.rs  lexer.rs  parser.rs  span.rs  syntax.rs  token.rs  yara_rule.rs
src/validation/: bytes.rs  encoding.rs  size.rs
test/: bad_rule.yar  rule.yar
test/rules/: bad_rule.yar  bad_rule_name.yar  camel_case_string_identifier.yar  empty_blocks.yar  empty_string.yar
tests/: app.rs  cli.rs  filesystem.rs  linter.rs  parser.rs  test_performance.py  validation.rs
tests/filesystem/: collect.rs  filters.rs
tests/fixtures/: duplicate_string.yar  empty_condition.yar  empty_string_block.yar  empty_tokens.yar  good_rule.yar  hex_strings.yar  meta_out_of_order.yar  missing_meta_values.yar  various_strings.yar
tests/linter/: cops.rs  engine.rs
yarlinter/: config.py  utils.py
(+60 files in other folders)
